--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <p>I'm Veera <span>Bavithra</span></p>
             <p>This is my portfolio website to shows all </p>
             <p>Details and work experience of development</p>
+            <a href="resume.pdf">
             <input type="button" value="Download my CV">
+            </a>
         </div>
         <img src="IMG-20231013-WA0018-removebg-preview.png" alt="">
     </div>
