--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>I'm Veera <span>Bavithra</span></p>
             <p>This is my portfolio website to shows all </p>
             <p>Details and work experience of development</p>
-            <a href="resume.pdf">
+            <a href="https://drive.google.com/file/d/1dv_lc_Vjs60NKQnNZrek0-cFoiMTiDIc/view?usp=sharing">
             <input type="button" value="Download my CV">
             </a>
         </div>
